classDiagram
    class Region {
        +string id
        +string name
        +string description
        +GeoCoordinate coordinates
        +string[] imageUrls
        +string climate
        +string bestTimeToVisit
        +Attraction[] attractions
        +string keyFacts
        +getRegionDetails() Object
    }

    class Attraction {
        +string id
        +string name
        +string description
        +string regionId
        +GeoCoordinate coordinates
        +string[] imageUrls
        +string category
        +number rating
        +string[] tags
        +OpeningHours openingHours
        +number entryFee
        +getAttractionDetails() Object
    }

    class TourPackage {
        +string id
        +string title
        +string description
        +string[] regionIds
        +number duration
        +number price
        +string currency
        +string difficulty
        +string[] imageUrls
        +string[] included
        +string[] excluded
        +Itinerary itinerary
        +Review[] reviews
        +calculateAverageRating() number
        +getPackageDetails() Object
    }

    class Itinerary {
        +ItineraryDay[] days
        +addDay(day: ItineraryDay) void
        +removeDay(index: number) void
    }

    class ItineraryDay {
        +number dayNumber
        +string title
        +string description
        +string[] activities
        +Accommodation accommodation
        +Meal[] meals
    }

    class Accommodation {
        +string name
        +string type
        +string address
        +number stars
        +string description
    }

    class Meal {
        +string type
        +string description
        +boolean included
    }

    class MediaItem {
        +string id
        +string title
        +string description
        +string type
        +string url
        +string thumbnailUrl
        +string[] tags
        +string regionId
        +string categoryId
        +string uploadDate
        +string photographer
        +GeoCoordinate location
        +boolean isFeatured
        +getMediaDetails() Object
    }

    class ContentItem {
        +string id
        +string title
        +string description
        +string content
        +string type
        +string[] tags
        +string authorId
        +string publishDate
        +string[] mediaIds
        +string regionId
        +string categoryId
        +number readTime
        +boolean isFeatured
        +getContentSummary() Object
        +getFullContent() Object
    }

    class Guide {
        +string id
        +string name
        +string description
        +string[] languages
        +string[] specialties
        +string[] regionIds
        +ContactInfo contactInfo
        +string[] certifications
        +number yearsOfExperience
        +string[] imageUrls
        +number hourlyRate
        +string currency
        +Availability availability
        +Review[] reviews
        +calculateAverageRating() number
        +checkAvailability(date: Date) boolean
    }

    class TransportService {
        +string id
        +string name
        +string description
        +string type
        +string[] regionIds
        +ContactInfo contactInfo
        +VehicleOption[] vehicleOptions
        +boolean airportTransfer
        +ServiceArea serviceArea
        +string[] imageUrls
        +Review[] reviews
        +calculateAverageRating() number
        +getServiceDetails() Object
    }

    class VehicleOption {
        +string type
        +number capacity
        +number pricePerDay
        +string currency
        +string[] features
        +string[] imageUrls
    }

    class ServiceArea {
        +string[] cities
        +string[] regionIds
        +boolean nationalCoverage
    }

    class Review {
        +string id
        +string userId
        +string itemId
        +string itemType
        +number rating
        +string title
        +string comment
        +string date
        +number helpfulVotes
        +boolean verifiedUser
        +boolean verifiedPurchase
        +getRatingInfo() Object
    }

    class UserPreferences {
        +string language
        +string currency
        +string[] favoriteRegions
        +string[] preferredCategories
        +boolean darkMode
        +boolean emailNotifications
        +savePreferences() void
        +loadPreferences() UserPreferences
    }

    class SavedItem {
        +string id
        +string itemId
        +string itemType
        +string savedDate
        +string notes
        +getSavedItemDetails() Object
    }

    class LocalStorageService {
        +getData(key: string) Object
        +setData(key: string, data: Object) void
        +removeData(key: string) void
        +clearAll() void
        +getStorageSize() number
        +exportData() string
        +importData(jsonData: string) boolean
    }

    class DataService {
        -LocalStorageService storageService
        +getRegions() Region[]
        +getRegionById(id: string) Region
        +getAttractions(filters: Object) Attraction[]
        +getTourPackages(filters: Object) TourPackage[]
        +getMediaItems(filters: Object) MediaItem[]
        +getContentItems(filters: Object) ContentItem[]
        +getGuides(filters: Object) Guide[]
        +getTransportServices(filters: Object) TransportService[]
        +getUserPreferences() UserPreferences
        +getSavedItems() SavedItem[]
        +getReviews(itemId: string, itemType: string) Review[]
        +saveRegion(region: Region) boolean
        +saveAttraction(attraction: Attraction) boolean
        +saveTourPackage(tourPackage: TourPackage) boolean
        +saveMediaItem(mediaItem: MediaItem) boolean
        +saveContentItem(contentItem: ContentItem) boolean
        +saveGuide(guide: Guide) boolean
        +saveTransportService(service: TransportService) boolean
        +saveUserPreferences(preferences: UserPreferences) boolean
        +saveSavedItem(item: SavedItem) boolean
        +saveReview(review: Review) boolean
        +searchContent(query: string) Object[]
    }

    class SearchService {
        -DataService dataService
        +search(query: string, filters: Object) SearchResult[]
        +searchByRegion(regionId: string) SearchResult[]
        +searchByCategory(categoryId: string) SearchResult[]
        +getPopularSearches() string[]
        +saveSearchQuery(query: string) void
    }

    class SearchResult {
        +string id
        +string title
        +string type
        +string description
        +string imageUrl
        +string url
        +number relevanceScore
    }

    class AppContext {
        +DataService dataService
        +SearchService searchService
        +currentRegion: Region
        +currentAttraction: Attraction
        +currentPackage: TourPackage
        +loadingState: boolean
        +errorState: string
        +userPreferences: UserPreferences
        +setCurrentRegion(region: Region) void
        +setCurrentAttraction(attraction: Attraction) void
        +setCurrentPackage(package: TourPackage) void
        +setLoading(isLoading: boolean) void
        +setError(errorMessage: string) void
        +updateUserPreferences(preferences: UserPreferences) void
    }

    class HomeSection {
        -DataService dataService
        +featuredRegions: Region[]
        +promotedPackages: TourPackage[]
        +highlightedContent: ContentItem[]
        +featuredMedia: MediaItem[]
        +loadFeaturedContent() void
        +handleSectionNavigation(sectionId: string) void
    }

    class DiscoverMoroccoSection {
        -DataService dataService
        -SearchService searchService
        +regions: Region[]
        +selectedRegion: Region
        +mapView: boolean
        +heritageItems: ContentItem[]
        +cuisineItems: ContentItem[]
        +festivalItems: ContentItem[]
        +loadRegions() void
        +selectRegion(regionId: string) void
        +toggleMapView() void
        +loadRegionalContent(regionId: string) void
    }

    class MoroccanTourismSection {
        -DataService dataService
        -SearchService searchService
        +tourPackages: TourPackage[]
        +selectedPackage: TourPackage
        +filters: Object
        +sortOption: string
        +travelGuides: ContentItem[]
        +virtualTours: MediaItem[]
        +loadTourPackages(filters: Object) void
        +selectPackage(packageId: string) void
        +updateFilters(newFilters: Object) void
        +updateSortOption(option: string) void
        +loadTravelGuides(regionId: string) void
        +loadVirtualTours(regionId: string) void
    }

    class GallerySection {
        -DataService dataService
        -SearchService searchService
        +mediaItems: MediaItem[]
        +selectedItem: MediaItem
        +categories: string[]
        +selectedCategory: string
        +viewMode: string
        +loadMediaItems(filters: Object) void
        +selectMediaItem(itemId: string) void
        +selectCategory(category: string) void
        +updateViewMode(mode: string) void
    }

    class ContentHubSection {
        -DataService dataService
        -SearchService searchService
        +contentItems: ContentItem[]
        +selectedItem: ContentItem
        +categories: string[]
        +selectedCategory: string
        +contentType: string
        +loadContentItems(filters: Object) void
        +selectContentItem(itemId: string) void
        +selectCategory(category: string) void
        +updateContentType(type: string) void
    }

    class TourismServicesSection {
        -DataService dataService
        -SearchService searchService
        +guides: Guide[]
        +selectedGuide: Guide
        +transportServices: TransportService[]
        +selectedService: TransportService
        +filters: Object
        +loadGuides(filters: Object) void
        +loadTransportServices(filters: Object) void
        +selectGuide(guideId: string) void
        +selectTransportService(serviceId: string) void
        +updateFilters(newFilters: Object) void
    }

    class MapComponent {
        +regions: Region[]
        +selectedRegion: Region
        +attractions: Attraction[]
        +showAttractions: boolean
        +zoom: number
        +center: GeoCoordinate
        +initMap() void
        +handleRegionClick(regionId: string) void
        +handleAttractionClick(attractionId: string) void
        +updateZoom(zoomLevel: number) void
        +updateCenter(center: GeoCoordinate) void
        +toggleAttractions() void
    }

    class GalleryComponent {
        +items: MediaItem[]
        +layout: string
        +selectedItem: MediaItem
        +showLightbox: boolean
        +currentIndex: number
        +initGallery() void
        +handleItemClick(itemId: string) void
        +nextItem() void
        +previousItem() void
        +closeLightbox() void
        +updateLayout(layout: string) void
    }

    class VirtualTourComponent {
        +tourData: Object
        +currentScene: string
        +hotspots: Object[]
        +isLoading: boolean
        +initTour() void
        +loadScene(sceneId: string) void
        +handleHotspotClick(hotspotId: string) void
        +toggleFullscreen() void
    }

    Region -- Attraction : contains
    TourPackage -- Itinerary : has
    Itinerary -- ItineraryDay : contains
    ItineraryDay -- Accommodation : has
    ItineraryDay -- Meal : includes
    Guide -- Review : receives
    TransportService -- VehicleOption : offers
    TransportService -- ServiceArea : operates in
    TransportService -- Review : receives
    TourPackage -- Review : receives
    DataService -- LocalStorageService : uses
    SearchService -- DataService : uses
    AppContext -- DataService : uses
    AppContext -- SearchService : uses
    HomeSection -- DataService : uses
    DiscoverMoroccoSection -- DataService : uses
    DiscoverMoroccoSection -- SearchService : uses
    MoroccanTourismSection -- DataService : uses
    MoroccanTourismSection -- SearchService : uses
    GallerySection -- DataService : uses
    GallerySection -- SearchService : uses
    ContentHubSection -- DataService : uses
    ContentHubSection -- SearchService : uses
    TourismServicesSection -- DataService : uses
    TourismServicesSection -- SearchService : uses
    DiscoverMoroccoSection -- MapComponent : uses
    GallerySection -- GalleryComponent : uses
    MoroccanTourismSection -- VirtualTourComponent : uses